# synclibcpp

./: .gitignore  CMakeLists.txt  README.md  build.sh
dependencies/: FindJsoncpp.cmake
src/: diff.cpp  diff.h  diff.hpp  main.cpp  statevar.cpp  statevar.hpp  syncserver.cpp
test/: diff_test.cpp
test/js-client/: index.ts  package.json
test/resources/: objects.json
